--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="profile-card">
     <div class="head">
       <div class="profile-image">
-        <img src="./Profilphoto/Profilphoto.jpg" alt="Eszter Kovacs">
+        <img src="/Profilphoto/Profilphoto.jpg" alt="Eszter Kovacs">
       </div>
       <div class="name-headline">
         <h1>Eszter Kovacs</h1>
@@ -25,7 +25,7 @@
    <div><p class="gallery"><a src:     href="./index1.html" target="_blank">My Gallery</a></p>
     
       <p class="about">
-      I have worked mostly on business area but I would like to work as front-end developer. I love to work with datas and numbers.</p>
+      I have worked mostly on business area but I would like to work as a Front-end developer. I love to work with datas and numbers.</p>
       <p>I can speak English an German. I was in different countries to learn English, like in London, Malta and Dublin.</p> 
       <p> In my spare time I like travelling, listening music and trying new receipt. My favourit sport is yoga and bicycling.</p> 
       
