--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
   
     
-   <div><p class="gallery"><a src:     href="./index1.html" target="_blank">My Gallery</a></p>
+   <div><p class="gallery"><a     href="./index1.html" target="_blank">My Gallery</a></p>
     
       <p class="about">
       I have worked mostly on business area but I would like to work as a Front-end developer. I love to work with datas and numbers.</p>
@@ -36,7 +36,7 @@
         <ul>
           <li><a href="https://facebook.hu/" title="Facebook" class="social-icon"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
           <li><a href="https://gmal.com"/ title="E-mail" class="social-icon"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
-          <li><a href="https://github.com"/ title="Github" class="social-icon"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+          <li><a href="https://github.com"/title="Github" class="social-icon"><i class="fa fa-github" aria-hidden="true"></i></a></li>
         </ul>
       </section>
     </div>
