--- a/index1.html
+++ b/index1.html
@@ -5,6 +5,7 @@
   <title>My gallery</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="main1.css">
+</head>
   
 <body>
   
@@ -25,8 +26,8 @@
     <a href="#image3">3</a>
     <a href="#image4">4</a>
    </div>
-  </div>
-</section>
+  </section>
+</div>
 
 </body>
 </html>
