--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="profile-card">
     <div class="head">
       <div class="profile-image">
-        <img src="/Profilphoto/Profilphoto.jpg" alt="Eszter Kovacs">
+        <img src="Profilphoto/Profilphoto.jpg" alt="Eszter Kovacs">
       </div>
       <div class="name-headline">
         <h1>Eszter Kovacs</h1>
