add new changes

--- a/index1.html
+++ b/index1.html
@@ -2,10 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>My gallery</title>
+<link rel="stylesheet" type="text/css" href="main1.css">
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
   <title>My gallery</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="main1.css">
-</head>
   
 <body>
   
@@ -15,10 +22,10 @@
   </header>
   <section>
    <div id="images">
-    <img id="image1" src="Assets/img1.jpg"/>
-    <img id="image2" src="Assets/img2.jpg"/>
-    <img id="image3" src="Assets/img3.jpg"/>
-    <img id="image4" src="Assets/img4.jpg"/>
+    <img id="image1" src="/Assets/img1.jpg"/>
+    <img id="image2" src="/Assets/img2.jpg"/>
+    <img id="image3" src="/Assets/img3.jpg"/>
+    <img id="image4" src="/Assets/img4.jpg"/>
    </div>
    <div id="button">
     <a href="#image1">1</a>
@@ -26,8 +33,8 @@
     <a href="#image3">3</a>
     <a href="#image4">4</a>
    </div>
-  </section>
-</div>
+  </div>
+</section>
 
 </body>
 </html>
