--- a/index1.html
+++ b/index1.html
@@ -22,10 +22,10 @@
   </header>
   <section>
    <div id="images">
-    <img id="image1" src="/Assets/img1.jpg"/>
-    <img id="image2" src="/Assets/img2.jpg"/>
-    <img id="image3" src="/Assets/img3.jpg"/>
-    <img id="image4" src="/Assets/img4.jpg"/>
+    <img id="image1" src="Assets/img1.jpg"/>
+    <img id="image2" src="Assets/img2.jpg"/>
+    <img id="image3" src="Assets/img3.jpg"/>
+    <img id="image4" src="Assets/img4.jpg"/>
    </div>
    <div id="button">
     <a href="#image1">1</a>
