--- a/index1.html
+++ b/index1.html
@@ -5,15 +5,8 @@
   <meta name="viewport" content="width=device-width">
   <title>My gallery</title>
 <link rel="stylesheet" type="text/css" href="main1.css">
+</head>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>My gallery</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="main1.css">
-  
 <body>
   
  <div id="container">
@@ -22,19 +15,18 @@
   </header>
   <section>
    <div id="images">
-    <img id="image1" src="Assets/img1.jpg"/>
-    <img id="image2" src="Assets/img2.jpg"/>
-    <img id="image3" src="Assets/img3.jpg"/>
-    <img id="image4" src="Assets/img4.jpg"/>
+    <img id="image1" src="Assets/img1.jpg" alt="photo1"/>
+    <img id="image2" src="Assets/img2.jpg" alt="photo2"/>
+    <img id="image3" src="Assets/img3.jpg" alt="photo3"/>
+    <img id="image4" src="Assets/img4.jpg" alt="photo4"/>
    </div>
    <div id="button">
     <a href="#image1">1</a>
     <a href="#image2">2</a>
     <a href="#image3">3</a>
     <a href="#image4">4</a>
-   </div>
   </div>
-</section>
-
+ </section>
+</div>
 </body>
 </html>
