--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
       <div><p class="about">
       I have worked mostly on business area but I would like to work as a Front-end Developer. I love to work with datas and numbers.<br>
-      I can speak English an German. I was in different countries to learn English, like in London, Malta and Dublin.<br>
+      I can speak English an German. I was to learn English in London, Malta and Dublin.<br>
       In my spare time I like travelling, listening music and trying new receipt. My favourit sport are yoga and bicycling.<br>
       You can find a few of my photos <em>in my Gallery</em>.</p> 
       
