--- a/index1.html
+++ b/index1.html
@@ -14,7 +14,8 @@
    <h1>My gallery</h1>
   </header>
   <section>
-   <div id="images">
+    <h2>A few of my photos</h2>
+    <div id="images">
     <img id="image1" src="Assets/img1.jpg" alt="photo1"/>
     <img id="image2" src="Assets/img2.jpg" alt="photo2"/>
     <img id="image3" src="Assets/img3.jpg" alt="photo3"/>
