add new text and button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p><i class="fa fa-map-marker"></i> Budapest, HU</p>
       </div>
         
-      <div> <a class="gallery" href="./index1.html" target="_blank">Click on My gallery</a></div>  
+      <div> <button  onclick="window.location.href='./index1.html';">Click on My gallery</button></div> 
     
       <div><p class="about">
       I am economist. I love to work with datas and numbers.<br>
