--- a/index1.html
+++ b/index1.html
@@ -10,11 +10,9 @@
 <body>
   
  <div id="container">
-  <header>
-   <h1>My gallery</h1>
-  </header>
   <section>
-    <h2>A few of my photos</h2>
+    <h2>Travelling in Schweiz</h2>
+    <div id="text">Click the on the bottom</div>
     <div id="images">
     <img id="image1" src="Assets/img1.jpg" alt="photo1"/>
     <img id="image2" src="Assets/img2.jpg" alt="photo2"/>
