--- a/index1.html
+++ b/index1.html
@@ -11,8 +11,8 @@
   
  <div id="container">
   <section>
-    <h2>Travelling in Schweiz</h2>
-    <div id="text">Click the on the bottom</div>
+    <h2>Travelling in Switzerland</h2>
+    <div id="text">Click the on the button!</div>
     <div id="images">
     <img id="image1" src="Assets/img1.jpg" alt="photo1"/>
     <img id="image2" src="Assets/img2.jpg" alt="photo2"/>
