--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
         I am an economist, but I would like to be a site-builder.</p> </div></br>
      <p>I love to work with datas and numbers.
       I can speak English an German. 
-      I was to learn English for three weeks in London, Dublin and Malta. In my spare time I like travelling, listening to music and trying new receipts from the Internet. My favourit sports are yoga and cycling.</p>
+       I was to learn English for three weeks in London, Dublin and Malta. In my spare time I like travelling, listening to music and trying new receipts from the Internet. My favourit sports are yoga and cycling.</p></body>
       
       
     <section class="links">
         <ul>
-          <li><a href="https://facebook.hu/" title="Facebook" class="social-icon"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-          <li><a href="mailto:koveszter7@gmail.com" title="E-mail" class="social-icon"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
-          <li><a href="https://github.com/banana0000/" title="Github" class="social-icon"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+          <li><a href="https://facebook.hu/" title="Facebook" class="social-icon1"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+          <li><a href="mailto:koveszter7@gmail.com" title="E-mail" class="social-icon2"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+          <li><a href="https://github.com/banana0000/" title="Github" class="social-icon3"><i class="fa fa-github" aria-hidden="true"></i></a></li>
         </ul>
       </section>
     </div>
