--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="refresh" content="30">
+  <meta http-equiv="refresh" content="5">
   <title>About me</title>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./main.css">
 </head>
-<body>
-  <div class="profile-card">
+<body id="translateZ-1" class="tarolo">
+  <div class="profile-card" translateZ( -100px )>
     <nav id="nav">
     <a href="./index-hu.html" 
     target="_blank">HU</a></nav> 
