add zoom landescape correction

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./main.css">
 </head>
-<body id="translateZ-1" class="tarolo">
-  <div class="profile-card" translateZ( -100px )>
+<body>
+  <div class="profile-card" class="zoom">
     <nav id="nav">
     <a href="./index-hu.html" 
     target="_blank">HU</a></nav> 
