--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <span>from</span>
         <p><i class="fa fa-map-marker"></i> Budapest, HU</p>
       </div>
-      <button class="box" onclick="window.location.href='./gallery.html';">My Gallery</button></div> 
+      <a href='./gallery.html' class="btn">My Gallery</a></div> 
     
       <div> <p class="about">
         I am an economist, but I would like to be a front-end developer. I love to work with datas and numbers. I can speak English and German. In my spare time I enjoy travelling, listening to music and trying new receipts from the Internet. My favourit sports are yoga and cycling.</p>
