--- a/gallery.html
+++ b/gallery.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
+  <meta http-equiv="refresh" content="10">
   <title>My gallery</title>
-<link rel="stylesheet" type="text/css" href="main1.css">
+<link rel="stylesheet" type="text/css" href="./main1.css">
 </head>
 
 <body>
   
  <div id="container">
-  <section>
+  <section class="box">
     <h2>Travelling in Switzerland</h2>
-    <div id="text">Click the on the button!</div>
+    <div class="text">Click on the button!</div>
     <div id="images">
     <img id="image1" src="Assets/img1.jpg" alt="photo1"/>
     <img id="image2" src="Assets/img2.jpg" alt="photo2"/>
