--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="refresh" content="5">
+  <meta http-equiv="refresh" content="10">
   <title>About me</title>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -26,7 +26,7 @@
         <span>from</span>
         <p><i class="fa fa-map-marker"></i> Budapest, HU</p>
       </div>
-      <a href='./gallery.html' class="btn">My Gallery</a></div> 
+      <a href="./gallery.html" class="btn">My Gallery</a></div> 
     
       <div> <p class="about">
         I am an economist, but I would like to be a front-end developer. I love to work with datas and numbers. I can speak English and German. In my spare time I enjoy travelling, listening to music and trying new receipts from the Internet. My favourit sports are yoga and cycling.</p>
