--- a/index-hu.html
+++ b/index-hu.html
@@ -6,6 +6,7 @@
   <meta http-equiv="refresh" content="30">
   <title>About me</title>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <meta http-equiv="refresh" content="10">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./main.css">
