--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width">
   <meta http-equiv="refresh" content="10">
   <title>My gallery</title>
-<link rel="stylesheet" type="text/css" href="./main1.css">
+<link rel="stylesheet" type="text/css" href="./gallery.css">
 </head>
 
 <body>
