--- a/index-hu.html
+++ b/index-hu.html
@@ -15,7 +15,7 @@
   <div class="profile-card">
     <nav id="nav">
     <a href="./index.html" 
-    target="_blank">HU</a></nav> 
+    target="_blank">EN</a></nav> 
     <div class="head">
       <div class="profile-image">
         <img class="img1"
